# HA-kkt-kolbe-integration

./: .claude_notes.md  .gitignore  AI_GENERATED_WARNING.md  BETA_RELEASE_NOTES.md  CATEGORY_DETECTION.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOLD_TIER_CHECKLIST.md  HOTFIX_v2.0.0-beta.3.md  LICENSE  LOCAL_TUYA_GUIDE.md  LOGO_INFO.md  QUALITY_SCALE_ANALYSIS.md  README.md  REFACTORING_ROADMAP.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.5.0.md  RELEASE_NOTES_v2.0.0-beta.4.md  RELEASE_NOTES_v2.0.0-beta.5.md  RELEASE_NOTES_v2.0.0-beta.8.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v2.2.0.md  SECURITY.md  SHADOW_PROPERTIES_INTEGRATION.md  TINYTUYA_API_ARCHITECTURE.md  TROUBLESHOOTING.md  USE_CASES.md  config_example.yaml  fix_hood_config.py  hacs.json  info.md  pyproject.toml  pytest.ini  requirements_test.txt  test_asyncserviceinfo.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  new_device.md  new_device.yml
.github/workflows/: lint.yml  validate.yml
backups/: config_flow.py.v1.4.3.backup
blueprints/: README.md
blueprints/automation/: hood_auto_off.yaml  hood_light_auto_off.yaml  hood_with_cooktop.yaml  hood_with_ind_cooktop.yaml
custom_components/kkt_kolbe/: .gitignore  __init__.py  api_manager.py  base_entity.py  binary_sensor.py  bitfield_utils.py  config_flow.py  config_flow_v2.py  const.py  cooktop.py  cooktop.py.backup  cooktop_utils.py  coordinator.py  data.py  device_tracker.py  device_types.py  diagnostics.py  discovery.py  exceptions.py  fan.py  hybrid_coordinator.py  icons.json  light.py  manifest.json  number.py  quality_scale.yaml  reconnect_coordinator.py  repairs.py  scene.py  select.py  sensor.py  services.py  services.yaml  smart_discovery.py  (+3 more)
docs/: AUTOMATION_EXAMPLES.md  CONTRIBUTING.md  COOKTOP_SAFETY.md  DEVELOPER_GUIDE.md  GOLD_TIER_CHECKLIST.md  HA_VERSION_FEATURES.md  HOMEKIT.md  README.md  SECURITY.md  SMARTLIFE_ACTION_ITEMS.md  SMARTLIFE_CLOUD_IMPLEMENTATION_PLAN.md  SMARTLIFE_SETUP.md  kkd Solo HCM.md
experimental/: README.md
known_configs/: EB8313HC_datenpunkte.md  EB8313HC_things_data_model.json  ECCO_HCM_datenpunkte.md  ECCO_HCM_property_codes.txt  ECCO_HCM_things_data_model.json  Hermes_Style_api_curl_request_example_data_points.txt  Hermes_style_properties.json  Hermes_style_things_data_model.json  IND7705HC_api_curl_request_example_data_points.txt  IND7705HC_datenpunkte.md  IND7705HC_properties.json  IND7705HC_property_codes.txt  IND7705HC_things_data_model.json  README.md  SOLO_HCM_datenpunkte.md  datenmodell_aussagen.md  dcl_category_info.json  hermes_style_datenpunkte.md  property_codes.txt  real_device_mappings.py  tinytuya_cloud_api_guide.md  xfj_category_info.json  yyj_category_info.json
scripts/: lint  setup
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_device_tracker.py  test_diagnostics.py  test_discovery.py  test_exceptions.py  test_fan.py  test_hybrid_coordinator_key_resync.py  test_hybrid_coordinator_push.py  test_init.py  test_light.py  test_number.py  test_select.py  test_sensor.py  test_services.py  test_switch.py  test_tuya_device.py  test_tuya_sharing_client.py
(+27 files in other folders)
