[project]
name = "kkt-kolbe-integration"
version = "3.0.8"
description = "Home Assistant integration for KKT Kolbe kitchen appliances"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict parameter
]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["custom_components.kkt_kolbe"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = false
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "tinytuya.*",
    "zeroconf.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
